[package]
name = "privacy-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Shared, halo2-free foundation for privacy-indexer and privacy-relayer (event decode, calldata encode, plain data types, shield intents)."

[dependencies]
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2"
ethabi = "18"
ff = "0.13"
group = "0.13"
bitvec = { version = "1", default-features = false }
halo2curves = { version = "0.10.0", default-features = false }
